# hackforge-paint

./: .gitignore  BuildInstructions.txt  CMakeLists.txt  hackforge-paint.vcxproj  hackforge-paint.vcxproj.filters
.github/workflows/: cmake-single-platform.yml
SDL3-SDK/: put_SDL_SDK_here.txt
src/: main.cpp  win32_colorpicker.cpp  win32_colorpicker.h
